# PathTracer

./: .gitignore  CMakeLists.txt  README.md  bvh_timings.txt
cmake/: configuration.hpp.in
ext/: CMakeLists.txt
resources/models/: suzanne.mtl
resources/scenes/: barycentric.json  cornell.json  dragon.json  simple.json  sponza.json  texture.json
src/: aabb.cpp  aabb.hpp  anti_aliasing.cpp  anti_aliasing.hpp  assert.hpp  bvh.cpp  bvh.hpp  camera.cpp  camera.hpp  configuration.hpp  core_defines.hpp  image.cpp  image.hpp  intersection_tests.cpp  intersection_tests.hpp  lights.cpp  lights.hpp  main.cpp  math.cpp  math.hpp  path_tracer.cpp  path_tracer.hpp  sampling.cpp  sampling.hpp  scene.cpp  scene.hpp  shapes.cpp  shapes.hpp  tonemap.cpp  tonemap.hpp  transform.cpp  transform.hpp
src/resource/: material.cpp  material.hpp  model.cpp  model.hpp  resource_manager.cpp  resource_manager.hpp  skybox.cpp  texture.cpp
src/utils/: json_parsing.cpp  json_parsing.hpp  logger.cpp  logger.hpp  random.cpp  random.hpp  time.cpp  time.hpp
